# winner

./: .allyear  .clang-format  .gitignore  .htaccess  .tar.tstamp  .top  1337.mk  BUGS.md  CNAME  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Makefile  PULL_REQUEST_TEMPLATE.html  PULL_REQUEST_TEMPLATE.md  README.html  README.md  SECURITY.html  SECURITY.md  THANKS.md  about.html  about.md  ads.txt  authors.html  bugs-1998-2003-parta.md  bugs-1998-2003-partb.md  bugs.html  bugs.md  contact.html  contact.md  faq.html  faq.md  guidelines.html  how-to-bugfix.md  how-to-enter.md  how-to-help.md  index.html  index.md  ioccc.css  (+34 more)
.github/: FUNDING.yml
1984/: .date-range  .filelist  .year  1984.tar.bz2  Makefile  README  README.md  index.html  rules.html  rules.txt
1985/: .filelist  .year  1985.tar.bz2  Makefile  README  README.md  index.html  rules.html  rules.txt
1986/: .filelist  .year  1986.tar.bz2  Makefile  README  README.md  index.html  orig.Makefile  rules  rules.html  rules.txt
1987/: .filelist  .year  1987.tar.bz2  Makefile  README  README.md  index.html  rules  rules.html  rules.txt
1988/: .date-range  .filelist  .year  1988.tar.bz2  Makefile  README  README.md  applin.c  applin.hint  index.html  isaak.encode  litmaath.hint  phillipps.hint  robison.hint  rules  rules.txt  westley.fix.c  westley.hint  zsmall.c
1989/: .date-range  .filelist  .year  1989.tar.bz2  Makefile  README  README.md  fubar.c  index.html  jar.1.c  jar.1.sh  jar.2.c  ovdluhe.c  roemer.hint  rules  rules.txt  tromp.bsd.c  tromp.hint  tromp.s5.c  vanb.hint
1990/: .filelist  .gitignore  .year  1990.tar.bz2  Makefile  README  README.md  ansi.mk  baruch.hint  cmills.hint  common.mk  dds.c  dds.hint  index.html  pjr.c  pjr.hint  rules  rules.txt  scjones.c  scjones.hint
1991/: .filelist  .year  1991.tar.bz2  Makefile  README.md  ansi.mk  ant.hint  brnstnd_ansi.c  buzzard.hint  cdupont.hint  cdupont_ansi.c  common.mk  davidguy.c  dds.c  index.html  rince_ansi.c  rules  rules.txt  sorta.i2+2  sorta.iarg0  sorta.icalc  sorta.idup  sorta.iecho  sorta.ifact2  sorta.irot13  sorta.isleep  sorta.iwhosort  ttt.sh  westley.hint
1992/: .filelist  .year  1992.tar.bz2  Makefile  README  README.md  adrian.grep.1  adrian.grep.2  adrian.grep.try  albert.c  buzzard.1.c  buzzard.1.hint  buzzard.2.README  buzzard.2.c  buzzard.2.design  demo1.1st  demo1.th  demo2.th  demo4.th  gson.c  gson.hint  guidelines  guidelines.txt  help.th  imc.orig.c  index.html  kivinen.hint  lush.hint  marangon.c  mkentry.c  nathan.hint  rules  rules.txt  vern.c  vern.hint  vern.orig.c
1993/: .filelist  .gitignore  .tar.tstamp  .year  1993.tar.bz2  Makefile  README  README.md  ant.txt  cmills.hint  dgibson.data1  dgibson.data2  dgibson.data4  dgibson.data5  dgibson.hint  dgibson.sh  ejb.explain1  ejb.explain2  guidelines  guidelines.txt  index.html  jonth.hint  lmfjyh.hint  mkentry.c  rince.c  rince.data4  rince.hint  rules  rules.txt  schnitzi.hint  schnitzi.info  vanb.hint
1994/: .filelist  .year  1994.tar.bz2  Makefile  README  README.md  dodsond2.gz.uu  guidelines  guidelines.txt  horton.c  index.html  mkentry.c  rules  rules.txt  schnitzi.hint  shapiro.info  smr.hint  tvr.alt.c  tvr.hint  weisberg.hint
1995/: .filelist  .year  1995.tar.bz2  Makefile  README  README.md  cdua.hint  dodsond1.hint  dodsond2.hint  esde.data2  esde.hint  garry.test.sh  guidelines  guidelines.txt  heathbar.hint  index.html  leo.c  leo.hint  makarios.hint  mkentry.c  rules  rules.txt  savastio.hint  spinellis.hint  vanschnitz.c
1996/: .filelist  .gitignore  .tar.tstamp  .year  1996.tar.bz2  Makefile  README  README.md  august.c  august.hint  clock1  clock3  dalbec.hint  eldby.hint  gandalf.c  gandalf.hint  guidelines  guidelines.txt  huffman.hint  hunni.pl  index.html  mkentry.c  parse.oc  rules  rules.txt  schweikh1.hint  schweikh2.hint  schweikh3.hint  westley.hint
1998/: .filelist  .year  1337.mk  1998.tar.bz2  Makefile  README  README.md  banks.c  banks.orig.c  bas1.c  bas1.hint  desk.data  df.hint  dlowe.c  dlowe.hint  dorssel.hint2  fanf.hint  fanf.lambda  guidelines  guidelines.txt  index.html  mkentry.c  pyramid.data  pyramids.sc  rules  rules.txt  schnitzi.c  schweikh1.c  schweikh1.orig.c  schweikh2.hint  schweikh3.hint  tomtorfs.hint
2000/: .filelist  .gitignore  .year  2000.tar.bz2  Makefile  README  README.md  anderson.hint  bellard.hint  bmeyer.hint  briddlebane.c  briddlebane.orig.c  dmy2jd.c  guidelines  guidelines.txt  index.html  mkentry.c  natori.hint  primenum.c  primenum.hint  rules  rules.txt  schneiderwent.c  thadgavin.orig.c  tomx.hint
2001/: .date-range  .filelist  .year  2001.tar.bz2  Makefile  README  README.md  anonymous.c  cheong.hint  dgbeards.hint  guidelines  guidelines.txt  herrmann1.hint  herrmann2.cup  herrmann2.ioccc  index.html  jason.c  jason.hint  mkentry.c  ollinger.hint  rosten.hint  rules  rules.txt  westley.orig.c
2004/: .filelist  .gitignore  .tar.tstamp  .year  2004.tar.bz2  (+30 more)
2004/hibachi/src/: configure  configure.in  hibachi-start.sh  hibachi-start.sh.in  hibachi.c  makefile.in
2004/hibachi/src-alt/: configure  configure.in  hibachi-start.sh  hibachi-start.sh.in  ioccc.c  makefile.in  transform.sed
2004/hibachi/src-alt/IOCCC-2004/: mkentry.c
2004/hibachi/src-alt/localhost/reference/: rfc2616.html
2004/hibachi/src-alt/localhost/test/perl/: yahoo-ticker.pl.in
2004/hibachi/src-alt/localhost/test/php/: Date.php  sendform.php.in
2004/hibachi/src-alt/localhost/test/shell/: test0.sh  test1.sh
2004/hibachi/src/localhost/: CHANGES-OBFUSCATED.TXT  CHANGES-SPOILER.TXT  index.html  style.css
2004/hibachi/src/localhost/reference/: .date-range  rfc2616.html
2004/hibachi/src/localhost/test/perl/: index.html  yahoo-ticker.pl
2004/hibachi/src/localhost/test/php/: index.php  index_php.in  info.php  info.php.in  sendform.html  sendform.php
2004/hibachi/src/localhost/test/ruby/: .date-range  LUHN.rb  index.rb  index_rb.in
2004/hibachi/src/localhost/test/shell/: dump.sh  test0.sh  test1.sh  test2.sh
2005/mynx/source/: configure  configure.in  makefile.in  mynx.c
(+7042 files in other folders)
